[package]
name = "facebookSDKforRust"
version = "0.1.0"
authors = ["naveen <naveendavisv@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
tokio-test = "0.2.1"
serde_json = "1.0.57"
thiserror = "1.0.20"
anyhow = "1.0.32"
reqwest = { version = "0.10.8", features = ["blocking","json"]}